# serializer version: 1
# name: test_device_tracker[device_tracker.test_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.test_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'LRW3F7EK4NC700000-location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[device_tracker.test_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <TrackerEntityStateAttribute.LATITUDE: 'latitude'>: -30.222626,
      <TrackerEntityStateAttribute.LONGITUDE: 'longitude'>: -97.6236871,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker[device_tracker.test_route-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.test_route',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Route',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Route',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'route',
    'unique_id': 'LRW3F7EK4NC700000-route',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[device_tracker.test_route-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Route',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <TrackerEntityStateAttribute.LATITUDE: 'latitude'>: 30.2226265,
      <TrackerEntityStateAttribute.LONGITUDE: 'longitude'>: -97.6236871,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_route',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker_alt[device_tracker.test_location-statealt]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <TrackerEntityStateAttribute.LATITUDE: 'latitude'>: -30.222626,
      <TrackerEntityStateAttribute.LONGITUDE: 'longitude'>: -97.6236871,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker_alt[device_tracker.test_route-statealt]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Route',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <TrackerEntityStateAttribute.LATITUDE: 'latitude'>: 30.2226265,
      <TrackerEntityStateAttribute.LONGITUDE: 'longitude'>: -97.6236871,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_route',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
